# journal

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  compile
data/: CMakeLists.txt  com.evolve-os.journal.gschema.xml  com.solus-project.journal.gschema.xml  journal.desktop
src/: Files.vala  Journal.vala  Notebook.vala  Notebook.vala.ORIGINAL  Plugin.vala  Share.vala  Tab.vala  Window.vala  database.vala  dynamiclist.vala
vapi/: gtk+-3.0.vapi
